# byo-map-track-and-trace

./: .gitignore  README.md  package-lock.json  package.json
kml-conversion/: README.md  package-lock.json  package.json  pyproject.toml
kml-conversion/conversion/: clean.py
kml-conversion/public/: index.html
lib/: cdk-stack.ts
routing/: Dockerfile  README.md  pyproject.toml  pytest.ini
routing/routing/: __init__.py  lambda_handler.py  prepare.py
routing/routing/resources/: MyArea.json  MyCircle.json
routing/tests/: test_lambda_handler.py  test_prepare.py
routing/tests/fixtures/: list-geofences-response.json  route-request-with-avoidance-areas.json  route-request-with-geofenced-avoidance-areas.json  route-request-with-invalid-avoidance-areas.json  route-request-with-unavailable-geofenced-avoidance-areas.json  route-response-with-avoidance-areas.json  route-response-with-geofenced-avoidance-areas.json  simple-route-request.json  simple-route-response.json  unroutable-request-with-avoidance-areas.json
