# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: MIT-0

[tool.poetry]
name = "conversion"
version = "0.1.0"
description = ""
license = "MIT-0"
authors = ["Seth Fitzsimmons <sethfitz@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.6"
geojson = "^3.1.0"
click = "^8.1.7"

[tool.poetry.scripts]
clean = "conversion.clean:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
